broke the function by a boolean