@@ -1,11 +1,9 @@
 package victor.training.cleancode;
 
+import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.Test;
 import victor.training.testing.tools.CaptureSystemOutput;
 import victor.training.testing.tools.CaptureSystemOutput.OutputCapture;
-
-import java.util.Collections;
-import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -16,7 +14,7 @@ class BossTest {
    @Test
    @CaptureSystemOutput
    void bossLevelFluff(OutputCapture outputCapture) {
-      target.bossLevel(true, List.of(new Task(5)), false);
+      target.bossLevel(ImmutableList.of(new Task(5)), false);
 
       assertThat(outputCapture.toString())
           .isEqualToIgnoringNewLines("Logic1\n" +
@@ -30,7 +28,7 @@ class BossTest {
    @Test
    @CaptureSystemOutput
    void bossLevelFluff_c323(OutputCapture outputCapture) {
-      target.bossLevel(true, List.of(new Task(5)), true);
+      target.bossLevel(ImmutableList.of(new Task(5)), true);
 
       assertThat(outputCapture.toString())
           .isEqualToIgnoringNewLines("Logic1\n" +
@@ -46,7 +44,7 @@ class BossTest {
    @Test
    @CaptureSystemOutput
    void bossLevelFluff_emptyList(OutputCapture outputCapture) {
-      target.bossLevel(true, Collections.emptyList(), false);
+      target.bossLevel(ImmutableList.of(), false);
 
       assertThat(outputCapture.toString())
           .isEqualToIgnoringNewLines("");
@@ -54,7 +52,7 @@ class BossTest {
    @Test
    @CaptureSystemOutput
    void bossLevelFalse(OutputCapture outputCapture) {
-      target.bossLevel(false, List.of(new Task(5)), false);
+      target.bossLevelNonEU(ImmutableList.of(new Task(5)));
 
       assertThat(outputCapture.toString())
           .isEqualToIgnoringNewLines("Logic1\n" +
@@ -65,7 +63,7 @@ class BossTest {
    @Test
    @CaptureSystemOutput
    void stuffForEachElement_inWateverOrder(OutputCapture outputCapture) {
-      target.bossLevel(true, List.of(new Task(5),new Task(6)), false);
+      target.bossLevel(ImmutableList.of(new Task(5),new Task(6)), false);
 
       // we don't care in what order we validate or audit tasks
       assertThat(outputCapture.toString())
